--- a/styles/default.css
+++ b/styles/default.css
@@ -79,6 +79,7 @@ body{
     top: -5px;
 }
 canvas{
+    position: relative;
     margin-left: 10px;
     margin-top: 10px;
 }
@@ -120,6 +121,7 @@ canvas.withBG{
     position: absolute;
     top: -40px;
     height: 200px;
+    visibility: hidden;
     width: 100%;
     cursor: pointer;
     background-color: transparent;
